--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "forocoches",
+  "name": "fc-wrap",
   "version": "1.0.0",
-  "description": "",
+  "description": "Wrap para ForoCoches en JS",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["forocoches", "wrap"],
+  "license": "AGPL-3.0-or-later",
   "dependencies": {
-    "domutils": "^2.4.4",
+    "domutils": "git@github.com:imharvol/domutils.git#prevElementSibling",
     "htmlparser2": "^6.0.1",
     "node-fetch": "^2.6.1"
   }
