--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   ],
   "license": "AGPL-3.0-or-later",
   "dependencies": {
+    "chalk": "^4.1.0",
     "domutils": "git@github.com:imharvol/domutils.git#prevElementSibling",
     "htmlparser2": "^6.0.1",
     "node-fetch": "^2.6.1"
